--- a/partners.html
+++ b/partners.html
@@ -41,7 +41,7 @@
             <img class="avatar" src="https://images.discordapp.net/avatars/401826937938640896/6acc526e502f206a2bb958e1e4dc2a79.png?size=128" alt="Wings's avatar" style="border-radius:0">
             <h3>Wings</h3>
             <p>Wings is an easy-to-use, functional Discord bot with fun, music, memes, NSFW, images, and more!</p>
-            <p><b id="servCnt4">Loading...</b><br><a href="https://wings.disgd.pw" class="body-link" target="_blank">wings.disgd.pw</a></p>
+            <p><b id="servCnt4">Loading...</b><br><a href="https://wingsbot.me" class="body-link" target="_blank">wingsbot.me</a></p>
         </div>
         <div class="card">
             <img class="avatar" src="https://images.discordapp.net/avatars/375805687529209857/7528f050ec2521877bcfa1abe3cfbab4.png?size=128" alt="TwitchBot's avatar">
