--- a/index.html
+++ b/index.html
@@ -18,8 +18,12 @@
 </head>
 <body>
     <h1>disgd</h1>
-    <h2>Free web hosting for Discord bot owners</h2>
+    <h2>Free websites for Discord bot owners</h2>
     <p style="margin-top:2em;"><a href="features.html">Features</a> &bull; <a href="requirements.html">Requirements</a> &bull; <a href="partners.html">Partners</a></p>
     <p style="margin-bottom:3em;"><a href="apply.html">Apply</a> &bull; <a href="" target="_blank">Discord</a></p>
+    <p style="font-size: 80%">
+        <br><br>
+        Owned and operated by Akira#4587
+    </p>
 </body>
 </html>
