--- a/sites.html
+++ b/sites.html
@@ -38,7 +38,7 @@
             If you applied for a disgd website and have not been accepted or denied yet, you will still be eligible for a free website. Read the section above if you get accepted. If you are denied, then you may not apply again for a free disgd website.
         </p>
         <p>
-            <b>bot owners who have not appliet yet:</b>
+            <b>bot owners who have not applied yet:</b>
             <br><br>
             <u>We are accepting applications until May 15th.</u> After that time period, free disgd webstie applications will be closed.
         </p>
