--- a/partners.html
+++ b/partners.html
@@ -27,10 +27,10 @@
     <p style="margin-bottom:3em;"><a href="apply.html">Apply</a> &bull; <a href="https://discord.gg/6N4KJ93" target="_blank">Discord</a></p>
     <div class="flex">
         <div class="card">
-            <img class="avatar" src="https://images.discordapp.net/avatars/399315651338043392/21229f3059534b3f1e7d580143484472.png?size=128" alt="Monika's avatar">
+            <img class="avatar" src="https://images.discordapp.net/avatars/399315651338043392/cfae149561ab9bf73378ab4a72ab058c.png?size=128" alt="Monika's avatar">
             <h3>Monika</h3>
             <p>An entertaining Discord bot made to sharpen your server!</p>
-            <p><b id="servCnt1">Loading...</b><br><a href="https://luki.pw/monika" class="body-link" target="_blank">luki.pw/monika</a></p>
+            <p><b id="servCnt1">Loading...</b><br><a href="https://monikabot.pw" class="body-link" target="_blank">monikabot.pw</a></p>
         </div>
         <div class="card">
             <img class="avatar" src="https://images.discordapp.net/avatars/331609909823012875/df0b8d4319ca6c42dae8521a18d3c5bf.png?size=128" alt="Trinity's avatar">
@@ -53,6 +53,14 @@
             <p><b id="servCnt3">Loading...</b><br><a href="https://twitch.disgd.pw" class="body-link" target="_blank">twitch.disgd.pw</a></p>
         </div>
     </div>
+    <div class="flex">
+        <div class="card">
+            <img class="avatar" src="https://images.discordapp.net/avatars/313929155496378371/761f8bd1b742fd3d240d9a3bb2aa6690.png?size=128" alt="AekaBot's avatar" style="border-radius:0">
+            <h3>AekaBot</h3>
+            <p>A multi-purpose discord bot with features such as music, fart sounds, polls, nsfw/lewd commands and much more!</p>
+            <p><b id="servCnt5">Loading...</b><br><a href="https://aekabot.com" class="body-link" target="_blank">aekabot.com</a></p>
+        </div>
+    </div>
     <script async defer>
     $.getJSON("https://discordbots.org/api/bots/monika", function(data) {
         $("#servCnt1").html(data.server_count + " servers");
@@ -65,6 +73,9 @@
     });
     $.getJSON("https://discordbots.org/api/bots/wings", function(data) {
         $("#servCnt4").html(data.server_count + " servers");
+    });
+    $.getJSON("https://discordbots.org/api/bots/aekabot", function(data) {
+        $("#servCnt5").html(data.server_count + " servers");
     });
     </script>
 </body>
