Update email + links

--- a/contact.html
+++ b/contact.html
@@ -22,11 +22,11 @@
         <h1>Contact Me</h1>
         <p>Want to hire me, or just get in touch?</p>
         <br><br>
-        <p>For business inquiries, please send me an email at <a href="mailto:akira@monikabot.pw">akira@monikabot.pw</a>.</p>
+        <p>For business inquiries, please send me an email at <a href="mailto:admin@twitchbot.io">admin@twitchbot.io</a>.</p>
         <p class="social">
             You can also contact me through Akira#4587 on Discord or through any of the social media links below:<br><br>
             <a href="https://github.com/devakira"><i class="fab fa-github"></i></a>
-            <a href="https://discord.me/konomi"><i class="fab fa-discord"></i></a>
+            <a href="https://discord.gg/UNYzJqV"><i class="fab fa-discord"></i></a>
             <a href="https://twitter.com/AkiraDev_"><i class="fab fa-twitter"></i></a>
             <a class="disabled"><i class="fab fa-steam"></i></a>
             <a class="disabled"><i class="fab fa-twitch"></i></a>
