--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
             <h1>Freelance Web Developer &amp;&nbsp;<br>Open-Source Software Engineer</h1>
             <p class="social-icons">
                 <a href="https://github.com/devakira"><i class="fab fa-github"></i></a>
-                <a href="https://discord.me/konomi"><i class="fab fa-discord"></i></a>
+                <a href="https://discord.gg/UNYzJqV"><i class="fab fa-discord"></i></a>
                 <a href="https://twitter.com/AkiraDev_"><i class="fab fa-twitter"></i></a>
                 <a href="https://steamcommunity.com/id/akireee/"><i class="fab fa-steam"></i></a>
-                <a href="https://twitch.tv/ow_r3aper"><i class="fab fa-twitch"></i></a>
+                <a href="https://twitch.tv/twitchbot_discord"><i class="fab fa-twitch"></i></a>
             </p>
             <p style="margin:3em 0;">
                 <a href="contact.html" class="button">Contact Me</a>
