--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/landing.css">
-    <title>Akira - Web Developer & Software Engineer</title>
+    <title>IntoBot - Bot Developer & Web Developer</title>
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/brands.js" integrity="sha384-G/XjSSGjG98ANkPn82CYar6ZFqo7iCeZwVZIbNWhAmvCF2l+9b5S21K4udM7TGNu" crossorigin="anonymous"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="nav">
-        <a href="/" class="brand">Akira</a>
+        <a href="/" class="brand">IntoBot</a>
         <span class="right">
             <a href="contact.html">Contact</a>
             <a href="projects.html">Projects</a>
@@ -19,13 +19,10 @@
     </div>
     <div class="body-container">
         <div class="text-content">
-            <h1>Freelance Web Developer &amp;&nbsp;<br>Open-Source Software Engineer</h1>
+            <h1>Coder with Bot Development &amp;&nbsp;<br>Web Developer</h1>
             <p class="social-icons">
-                <a href="https://github.com/devakira"><i class="fab fa-github"></i></a>
-                <a href="https://discord.gg/UNYzJqV"><i class="fab fa-discord"></i></a>
-                <a href="https://twitter.com/AkiraDev_"><i class="fab fa-twitter"></i></a>
-                <a href="https://steamcommunity.com/id/akireee/"><i class="fab fa-steam"></i></a>
-                <a href="https://twitch.tv/twitchbot_discord"><i class="fab fa-twitch"></i></a>
+                <a href="https://github.com/BlobbyDiscord"><i class="fab fa-github"></i></a>
+                <a href="https://discord.gg/adAWA5q"><i class="fab fa-discord"></i></a>
             </p>
             <p style="margin:3em 0;">
                 <a href="contact.html" class="button">Contact Me</a>
@@ -34,7 +31,7 @@
         <img src="assets/mac.svg">
     </div>
     <div class="attribution">
-        Website copyright &copy; 2018 Akira. Computer art by <a href="https://www.uplabs.com/bhoolkukhush79" target="_blank">Khushboo Rathod</a>.
+        Website copyright &copy; 2019 IntoBot. Computer art by <a href="https://www.uplabs.com/bhoolkukhush79" target="_blank">Khushboo Rathod</a>.
     </div>
 </body>
 </html>
